[gd_scene load_steps=61 format=2]

[ext_resource path="res://Pre_start_screen/number background/Title.tscn" type="PackedScene" id=1]
[ext_resource path="res://Pre_start_screen/Title/title.gd" type="Script" id=2]
[ext_resource path="res://Pre_start_screen/asset_final_for_pre_start/Boxing animal sprite/Boxing Animal Sprites/PNG/Red Team/Bunny/02 Run/Red_Bunny_Run_002.png" type="Texture" id=3]
[ext_resource path="res://Pre_start_screen/asset_final_for_pre_start/Boxing animal sprite/Boxing Animal Sprites/PNG/Red Team/Bunny/02 Run/Red_Bunny_Run_003.png" type="Texture" id=4]
[ext_resource path="res://Pre_start_screen/asset_final_for_pre_start/Boxing animal sprite/Boxing Animal Sprites/PNG/Red Team/Bunny/02 Run/Red_Bunny_Run_001.png" type="Texture" id=5]
[ext_resource path="res://Pre_start_screen/asset_final_for_pre_start/Boxing animal sprite/Boxing Animal Sprites/PNG/Red Team/Bunny/02 Run/Red_Bunny_Run_000.png" type="Texture" id=6]
[ext_resource path="res://Pre_start_screen/asset_final_for_pre_start/Boxing animal sprite/Boxing Animal Sprites/PNG/Red Team/Foxy/02 Run/Red_Foxy_Run_002.png" type="Texture" id=7]
[ext_resource path="res://Pre_start_screen/asset_final_for_pre_start/Boxing animal sprite/Boxing Animal Sprites/PNG/Red Team/Foxy/02 Run/Red_Foxy_Run_005.png" type="Texture" id=8]
[ext_resource path="res://Pre_start_screen/asset_final_for_pre_start/Boxing animal sprite/Boxing Animal Sprites/PNG/Red Team/Bunny/02 Run/Red_Bunny_Run_004.png" type="Texture" id=9]
[ext_resource path="res://Pre_start_screen/asset_final_for_pre_start/Boxing animal sprite/Boxing Animal Sprites/PNG/Red Team/Foxy/02 Run/Red_Foxy_Run_000.png" type="Texture" id=10]
[ext_resource path="res://Pre_start_screen/asset_final_for_pre_start/Boxing animal sprite/Boxing Animal Sprites/PNG/Red Team/Bunny/02 Run/Red_Bunny_Run_005.png" type="Texture" id=11]
[ext_resource path="res://Pre_start_screen/asset_final_for_pre_start/Boxing animal sprite/Boxing Animal Sprites/PNG/Red Team/Foxy/02 Run/Red_Foxy_Run_003.png" type="Texture" id=12]
[ext_resource path="res://Pre_start_screen/asset_final_for_pre_start/Boxing animal sprite/Boxing Animal Sprites/PNG/Red Team/Foxy/02 Run/Red_Foxy_Run_001.png" type="Texture" id=13]
[ext_resource path="res://Pre_start_screen/asset_final_for_pre_start/Boxing animal sprite/Boxing Animal Sprites/PNG/Red Team/Foxy/02 Run/Red_Foxy_Run_004.png" type="Texture" id=14]
[ext_resource path="res://Pre_start_screen/Title/MATH.png" type="Texture" id=15]
[ext_resource path="res://Pre_start_screen/Title/FIGHT.png" type="Texture" id=16]
[ext_resource path="res://Pre_start_screen/asset_final_for_pre_start/explosion_1/explosion_1_01.png" type="Texture" id=17]
[ext_resource path="res://Pre_start_screen/asset_final_for_pre_start/fire_big/fire_big_05.png" type="Texture" id=18]
[ext_resource path="res://Pre_start_screen/asset_final_for_pre_start/explosion_1/explosion_1_08.png" type="Texture" id=19]
[ext_resource path="res://Pre_start_screen/asset_final_for_pre_start/explosion_1/explosion_1_07.png" type="Texture" id=20]
[ext_resource path="res://Pre_start_screen/asset_final_for_pre_start/fire_big/fire_big_07.png" type="Texture" id=21]
[ext_resource path="res://Pre_start_screen/asset_final_for_pre_start/fire_big/fire_big_01.png" type="Texture" id=22]
[ext_resource path="res://Pre_start_screen/asset_final_for_pre_start/fire_big/fire_big_00.png" type="Texture" id=23]
[ext_resource path="res://Pre_start_screen/asset_final_for_pre_start/fire_big/fire_big_03.png" type="Texture" id=24]
[ext_resource path="res://Pre_start_screen/asset_final_for_pre_start/explosion_1/explosion_1_04.png" type="Texture" id=25]
[ext_resource path="res://Pre_start_screen/asset_final_for_pre_start/fire_big/fire_big_02.png" type="Texture" id=26]
[ext_resource path="res://Pre_start_screen/asset_final_for_pre_start/explosion_1/explosion_1_03.png" type="Texture" id=27]
[ext_resource path="res://Pre_start_screen/asset_final_for_pre_start/fire_big/fire_big_04.png" type="Texture" id=28]
[ext_resource path="res://Pre_start_screen/asset_final_for_pre_start/fire_big/fire_big_06.png" type="Texture" id=29]
[ext_resource path="res://Pre_start_screen/asset_final_for_pre_start/explosion_1/explosion_1_02.png" type="Texture" id=30]
[ext_resource path="res://Pre_start_screen/asset_final_for_pre_start/explosion_1/explosion_1_05.png" type="Texture" id=31]
[ext_resource path="res://Pre_start_screen/asset_final_for_pre_start/explosion_1/explosion_1_06.png" type="Texture" id=32]
[ext_resource path="res://Pre_start_screen/asset_final_for_pre_start/explosion_1/explosion_1_00.png" type="Texture" id=33]
[ext_resource path="res://Pre_start_screen/Title/gloves.png" type="Texture" id=34]
[ext_resource path="res://Pre_start_screen/asset_final_for_pre_start/burst_background_large_screen_yellow.png" type="Texture" id=35]
[ext_resource path="res://Pre_start_screen/Operation_corner/corner_icon.gd" type="Script" id=36]
[ext_resource path="res://Pre_start_screen/asset_final_for_pre_start/icon_math_fight/multiply.png" type="Texture" id=37]
[ext_resource path="res://Pre_start_screen/asset_final_for_pre_start/icon_math_fight/plus.png" type="Texture" id=38]
[ext_resource path="res://Pre_start_screen/asset_final_for_pre_start/icon_math_fight/divise.png" type="Texture" id=39]
[ext_resource path="res://Pre_start_screen/asset_final_for_pre_start/icon_math_fight/minus.png" type="Texture" id=40]
[ext_resource path="res://Pre_start_screen/asset_final_for_pre_start/ruler.png" type="Texture" id=41]
[ext_resource path="res://Pre_start_screen/Pre_start_screen.gd" type="Script" id=42]
[ext_resource path="res://Gamemodes/training_ground/04B_30__.TTF" type="DynamicFontData" id=43]
[ext_resource path="res://Pre_start_screen/asset_final_for_pre_start/unnamed.png" type="Texture" id=44]
[ext_resource path="res://Gamemodes/light source.png" type="Texture" id=45]
[ext_resource path="res://Main_Screen/glove_bar.jpg" type="Texture" id=46]
[ext_resource path="res://Pre_start_screen/asset_final_for_pre_start/553617__humus3000__chill-vibes.wav" type="AudioStream" id=47]
[ext_resource path="res://game_musique/UI_SFX_Set/click2.wav" type="AudioStream" id=48]
[ext_resource path="res://Main_Screen/swishes_sound/swish-1.wav" type="AudioStream" id=49]
[ext_resource path="res://Main_Screen/swishes_sound/swish-2.wav" type="AudioStream" id=50]
[ext_resource path="res://game_musique/electric-wire.wav" type="AudioStream" id=51]
[ext_resource path="res://Main_Screen/Life Hacks.otf" type="DynamicFontData" id=52]
[ext_resource path="res://admob-lib/admob.gd" type="Script" id=53]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 23 ), ExtResource( 22 ), ExtResource( 26 ), ExtResource( 24 ), ExtResource( 28 ), ExtResource( 18 ), ExtResource( 29 ), ExtResource( 21 ) ],
"loop": true,
"name": "fire",
"speed": 25.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 13 ), ExtResource( 7 ), ExtResource( 12 ), ExtResource( 14 ), ExtResource( 8 ) ],
"loop": true,
"name": "run",
"speed": 60.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 9 ), ExtResource( 11 ) ],
"loop": true,
"name": "run",
"speed": 60.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 33 ), ExtResource( 17 ), ExtResource( 30 ), ExtResource( 27 ), ExtResource( 25 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 20 ), ExtResource( 19 ) ],
"loop": false,
"name": "default",
"speed": 25.0
} ]

[sub_resource type="RectangleShape2D" id=5]

[sub_resource type="DynamicFont" id=6]
size = 50
font_data = ExtResource( 43 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 52 )

[node name="Pre_start_screen" type="Node2D"]
script = ExtResource( 42 )
__meta__ = {
"_edit_vertical_guides_": [ 873.471 ]
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_top = -1.0
margin_right = 869.0
margin_bottom = 581.0
texture = ExtResource( 35 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="corner_icon" type="Node2D" parent="TextureRect"]
visible = false
script = ExtResource( 36 )

[node name="PLUS" type="TextureRect" parent="TextureRect/corner_icon"]
margin_left = 2.11893
margin_top = 474.64
margin_right = 102.119
margin_bottom = 574.64
texture = ExtResource( 38 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MINUS" type="TextureRect" parent="TextureRect/corner_icon"]
margin_right = 100.0
margin_bottom = 100.0
texture = ExtResource( 40 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DIVIDE" type="TextureRect" parent="TextureRect/corner_icon"]
margin_left = 758.576
margin_top = 4.23785
margin_right = 858.576
margin_bottom = 104.238
texture = ExtResource( 39 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MULTIPLY" type="TextureRect" parent="TextureRect/corner_icon"]
margin_left = 760.695
margin_top = 472.521
margin_right = 860.695
margin_bottom = 572.521
texture = ExtResource( 37 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="TextureRect/corner_icon"]

[node name="Show_Timer" type="Timer" parent="TextureRect/corner_icon"]
wait_time = 2.0
one_shot = true
autostart = true

[node name="gloves" type="Sprite" parent="TextureRect"]
position = Vector2( 430.59, 286.505 )
scale = Vector2( 0.324604, 0.2945 )
texture = ExtResource( 34 )

[node name="Title" parent="TextureRect" instance=ExtResource( 1 )]

[node name="main" type="Node2D" parent="."]

[node name="title" type="Node2D" parent="."]
scale = Vector2( 0.9, 0.9 )
script = ExtResource( 2 )

[node name="Ruler" type="Sprite" parent="title"]
position = Vector2( 470.134, 762.79 )
rotation = -0.0820305
scale = Vector2( 0.389, 0.389 )
texture = ExtResource( 41 )

[node name="fire" type="AnimatedSprite" parent="title"]
visible = false
modulate = Color( 1, 1, 1, 0.498039 )
position = Vector2( 404.714, 180.108 )
scale = Vector2( 0.9172, 1.15869 )
frames = SubResource( 1 )
animation = "fire"

[node name="foxy" type="AnimatedSprite" parent="title"]
position = Vector2( 1100, 312.874 )
scale = Vector2( 0.7, 0.7 )
frames = SubResource( 2 )
animation = "run"
frame = 5
flip_h = true

[node name="bunny" type="AnimatedSprite" parent="title"]
position = Vector2( -102.308, 155.275 )
scale = Vector2( 0.7, 0.7 )
frames = SubResource( 3 )
animation = "run"

[node name="Bunny_pos" type="Position2D" parent="title"]
position = Vector2( 100, 150.762 )

[node name="Foxy_pos" type="Position2D" parent="title"]
position = Vector2( 200.379, 316.238 )

[node name="Math" type="Sprite" parent="title"]
position = Vector2( -85.3072, 166.124 )
scale = Vector2( 1.543, 1.713 )
texture = ExtResource( 15 )

[node name="Math_pos" type="Position2D" parent="title"]
position = Vector2( 750.082, 175.343 )

[node name="Fight_pos" type="Position2D" parent="title"]
position = Vector2( 300, 311.127 )

[node name="Tween" type="Tween" parent="title"]

[node name="Tween2" type="Tween" parent="title"]

[node name="Fight" type="Node2D" parent="title"]
position = Vector2( 1250, 334.304 )
scale = Vector2( 1.54277, 1.71284 )

[node name="Sprite" type="Sprite" parent="title/Fight"]
position = Vector2( 575.578, 329.909 )
texture = ExtResource( 16 )
__meta__ = {
"_edit_group_": true
}

[node name="lightning" type="AnimatedSprite" parent="title"]
visible = false
position = Vector2( 488.708, 311.314 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 4 )

[node name="lighting_sound" type="AudioStreamPlayer2D" parent="title/lightning"]
stream = ExtResource( 51 )

[node name="Title_Timer" type="Timer" parent="title"]
one_shot = true

[node name="Ruler_tween" type="Tween" parent="title"]

[node name="ruler_pos" type="Position2D" parent="title"]
position = Vector2( 496.77, 296.65 )
scale = Vector2( 1.11111, 1.11111 )

[node name="fluffy_timer" type="Timer" parent="title"]
wait_time = 3.0
one_shot = true

[node name="Press_to_play" type="TouchScreenButton" parent="title"]
position = Vector2( 0.272148, 1.11111 )
scale = Vector2( 48.3333, 32.2222 )
shape = SubResource( 5 )
action = "press_to_play"

[node name="unnamed" type="Sprite" parent="title/Press_to_play"]
position = Vector2( 10.4697, 15.75 )
scale = Vector2( 0.00384625, 0.00454023 )
texture = ExtResource( 44 )

[node name="Timer" type="Timer" parent="title/Press_to_play"]
wait_time = 2.0
one_shot = true

[node name="P_toplay_tween" type="Tween" parent="title/Press_to_play"]

[node name="small_logo_pos" type="Position2D" parent="title"]
position = Vector2( 496.77, 552.494 )

[node name="Title_tween" type="Tween" parent="title"]

[node name="swicht_math" type="AudioStreamPlayer2D" parent="title"]
scale = Vector2( 1.11111, 1.11111 )
stream = ExtResource( 49 )

[node name="swicht_fight" type="AudioStreamPlayer2D" parent="title"]
scale = Vector2( 1.11111, 1.11111 )
stream = ExtResource( 50 )

[node name="first_screen" type="Node2D" parent="."]

[node name="Label" type="Label" parent="."]
margin_left = 706.756
margin_top = 130.245
margin_right = 797.756
margin_bottom = 181.245
custom_fonts/font = SubResource( 6 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 445, 268 )
__meta__ = {
"_editor_description_": ""
}

[node name="Light2D" type="Light2D" parent="Position2D"]
visible = false
position = Vector2( 0, 1.25992 )
texture = ExtResource( 45 )
energy = 0.4
__meta__ = {
"_editor_description_": ""
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 873, 0 )

[node name="TextureRect2" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
margin_left = 867.0
margin_right = 1985.0
margin_bottom = 587.0
texture = ExtResource( 46 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Sound_game" type="Node2D" parent="."]

[node name="music" type="AudioStreamPlayer2D" parent="Sound_game"]
stream = ExtResource( 47 )

[node name="button_sound" type="AudioStreamPlayer2D" parent="Sound_game"]
stream = ExtResource( 48 )
volume_db = 24.0

[node name="lobe" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="warning" type="RichTextLabel" parent="."]
margin_left = 2.55951
margin_top = 453.528
margin_right = 836.56
margin_bottom = 522.528
custom_fonts/normal_font = SubResource( 7 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/table_vseparation = 4
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
custom_constants/table_hseparation = 4
text = "WARNING 
 IF YOU LEAVE THE GAME WITHOUT PRESSING THE LEAVE BUTTON NEXT TO THE TUTORIAL BUTTON YOUR  PROGRESSION WILL NOT BE SAVED"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AdMob" type="Node" parent="."]
script = ExtResource( 53 )
is_real = true
banner_on_top = false
banner_size = "SMART_BANNER"
banner_id = "ca-app-pub-6162036726133653/8438903851"

[connection signal="timeout" from="TextureRect/corner_icon/Show_Timer" to="TextureRect/corner_icon" method="_on_Show_Timer_timeout"]
[connection signal="music_stop" from="title" to="." method="_on_title_music_stop"]
[connection signal="animation_finished" from="title/lightning" to="title" method="_on_lightning_animation_finished"]
[connection signal="timeout" from="title/Title_Timer" to="title" method="_on_Title_Timer_timeout"]
[connection signal="timeout" from="title/fluffy_timer" to="title" method="_on_fluffy_timer_timeout"]
[connection signal="pressed" from="title/Press_to_play" to="." method="_on_Press_to_play_pressed"]
[connection signal="pressed" from="title/Press_to_play" to="title" method="_on_Press_to_play_pressed"]
[connection signal="timeout" from="title/Press_to_play/Timer" to="title" method="_on_Timer_timeout"]
[connection signal="finished" from="title/swicht_math" to="title" method="_on_swicht_math_finished"]
[connection signal="finished" from="title/swicht_fight" to="title" method="_on_swicht_fight_finished"]
